# fortan-array-bounds-checker

./: .gitignore  build.sh  design.md  evaluation.md  implementation.md  readme.md  run.sh
frontend/: package-lock.json  package.json  server.js
frontend/public/: app.js  index.html  style.css
src/: CMakeLists.txt  bounds_checker.cpp  bounds_checker.h  main_standalone.cpp  readme.md  test05_const_expr.f90
testcases/: dynamic_subscript_analysis.f90  hybrid_index_validation.f90  verified_safe_accesses.f90
tests/: boundary_violation_literals.f90  compile_time_expression_check.f90
